# MULO

./: .gitignore  .gitmodules  BUILD_UNIVERSAL.md  CMakeLists.txt  PLUGIN_GUIDE.md  PLUGIN_SYSTEM.md  QUICKSTART_WINDOWS.md  README.md  REFACTORING_SUMMARY.md  SANDBOX_CROSS_PLATFORM.md  SANDBOX_IMPLEMENTATION_SUMMARY.md  SANDBOX_QUICK_REFERENCE.md  SANDBOX_SCRIPTS_README.md  SANDBOX_SUCCESS.md  Timeline.hpp  TimelineComponent.hpp  WORKSPACE  bazel-MDAW  bazel-bin  bazel-out  bazel-testlogs  build.sh  build_all.bat  build_all_windows.ps1  config.json  debug_mulo.sh  launch_sandbox.ps1  mdaw.sh  run_sandbox.bat  run_with_sandbox.ps1  run_with_sandbox.sh  test_sandbox_setup.ps1  test_sandbox_setup.sh  test_upload  test_upload_flow  test_vst3.sh  untitled_autosave.mpf
Application_Old/: Application.cpp  Application.hpp
assets/: empty_project.mpf
containers/: Containerfile  Containerfile.runtime  start_mulo.sh
extensions/: CMakeLists.txt  build.sh
extensions/extensions_src/: AppControls.hpp  FileBrowserComponent.hpp  KBShortcuts.hpp  MixerComponent.hpp  SettingsComponent.hpp  TimelineComponent.hpp
extensions/includes/: FileTree.hpp  MULOComponent.hpp  UIData.hpp
extensions_toolkit/: CMakeLists.txt  README.md  build.sh
extensions_toolkit/.build_hashes/: AppControls.hash  ExtensionUploader.hash  FXRackComponent.hash  FileBrowserComponent.hash  KBShortcuts.hash  MULOCollab.hash  MarketplaceComponent.hash  MixerComponent.hash  PianoRollComponent.hash  ScrubberComponent.hash  SettingsComponent.hash  TimelineComponent.hash  UserLogin.hash  engine_sources.hash
extensions_toolkit/extensions_src/: AppControls.hpp  DecibelComponent.hpp  ExtensionUploader.hpp  FXRackComponent.hpp  FileBrowserComponent.hpp  KBShortcuts.hpp  MULOCollab.hpp  MarketplaceComponent.hpp  MixerComponent.hpp  PianoRollComponent.hpp  ScrubberComp.hpp  ScrubberComponent.hpp  SettingsComponent.hpp  TimelineComponent.hpp  UserLogin.hpp
plugins/api/: BUILD.bazel  plugin_api.h
plugins/examples/gain/: BUILD.bazel  gain_plugin.cc
plugins/runner/: BUILD.bazel  plugin_runner.cc  plugin_runner.h  sandbox.h
src/: DebugConfig.hpp  main.cpp
src/audio/: AllTracks.hpp  AudioClip.cpp  AudioClip.hpp  AudioTrack.cpp  AudioTrack.hpp  Composition.cpp  Composition.hpp  Effect.cpp  Effect.hpp  Engine.cpp  Engine.hpp  Instrument.hpp  MIDIClip.cpp  MIDIClip.hpp  MIDITrack.cpp  MIDITrack.hpp  Track.cpp  Track.hpp  VSTEditorWindow.hpp  VSTPluginManager.hpp
src/frontend/: Application.cpp  Application.hpp  CustomUIElements.cpp  CustomUIElements.hpp  EmailService.hpp  FileTree.cpp  FileTree.hpp  MULOComponent.hpp  PluginSandbox.cpp  PluginSandbox.hpp  TimelineComponent.cpp  TimelineComponent.hpp  TimelineHelpers.hpp  UIData.hpp  UIHelpers.hpp  sandbox_override.cpp  sandbox_override_windows.cpp  ui.hpp
src/frontend/Components/: AppControls.cpp  AppControls.hpp  FileBrowserComponent.cpp  FileBrowserComponent.hpp  KBShortcuts.cpp  KBShortcuts.hpp  MixerComponent.cpp  MixerComponent.hpp  SettingsComponent.cpp  SettingsComponent.hpp  TimelineComponent.cpp  TimelineComponent.hpp
tests/smoke/: BUILD
